--- a/homework/BC14_SAMAR_Pham Nguyen Phuong Khai/index.html
+++ b/homework/BC14_SAMAR_Pham Nguyen Phuong Khai/index.html
@@ -335,19 +335,30 @@
       <div class="plan__content">
         <div class="slide__option"></div>
         <div class="plan__option">
-          <div class="plan__item">
-            <h3>Basic Plan</h3>
-            <span>$49</span>
-            <p>/Month</p>
-            <hr />
-            <ul>
-              <li>Graphic Design</li>
-              <li>Web Design</li>
-              <li>UX/UI</li>
-              <li>HTML/CSS</li>
-              <li>SEO Marketing</li>
-              <li>Business Analysis</li>
-            </ul>
+          <div class="plan__item__wrap">
+            <div class="plan__item">
+              <div class="title__item">
+                <h3>Basic Plan</h3>
+              </div>
+              <div class="icon__item">
+                <img src="./img/pic4_1.jpg" alt="" style="width: 125px;"/>
+              </div>
+              <div class="price__item">
+                <p style="display: inline;">$49<p><p>/month</p>
+              </div>
+              <div class="feature__price__item">
+                <ul>
+                  <li>Graphic Design</li>
+                  <li>Web Design</li>
+                  <li>UX/UI</li>
+                  <li>HTML/CSS</li>
+                  <li>SEO Marketing</li>
+                  <li>Business Analysis</li>
+                </ul>
+              </div>
+
+              <a href="#">Start now</a>
+            </div>
           </div>
         </div>
       </div>
