--- a/homework/BC14_SAMAR_Pham Nguyen Phuong Khai/index.html
+++ b/homework/BC14_SAMAR_Pham Nguyen Phuong Khai/index.html
@@ -467,7 +467,7 @@
                 <p>25 MARCH 2021</p>
               </div>
               <div class="blog__mid">
-                <h3>Lorem ipsum dolor sit amet.</h3>
+                <h3>Maecenas maximus augue eget libero dictum.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque debitis maxime corrupti odio autem aliquam beatae, eum impedit cum! Temporibus.</p>
               </div>
               <div class="blog__bottom">
@@ -485,7 +485,7 @@
                 <p>25 MARCH 2021</p>
               </div>
               <div class="blog__mid">
-                <h3>Lorem ipsum dolor sit amet.</h3>
+                <h3>Maecenas maximus augue eget libero dictum.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque debitis maxime corrupti odio autem aliquam beatae, eum impedit cum! Temporibus.</p>
               </div>
               <div class="blog__bottom">
@@ -503,7 +503,7 @@
                 <p>25 MARCH 2021</p>
               </div>
               <div class="blog__mid">
-                <h3>Lorem ipsum dolor sit amet.</h3>
+                <h3>Maecenas maximus augue eget libero dictum.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque debitis maxime corrupti odio autem aliquam beatae, eum impedit cum! Temporibus.</p>
               </div>
               <div class="blog__bottom">
@@ -521,7 +521,7 @@
                 <p>25 MARCH 2021</p>
               </div>
               <div class="blog__mid">
-                <h3>Lorem ipsum dolor sit amet.</h3>
+                <h3>Maecenas maximus augue eget libero dictum.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque debitis maxime corrupti odio autem aliquam beatae, eum impedit cum! Temporibus.</p>
               </div>
               <div class="blog__bottom">
@@ -539,7 +539,7 @@
                 <p>25 MARCH 2021</p>
               </div>
               <div class="blog__mid">
-                <h3>Lorem ipsum dolor sit amet.</h3>
+                <h3>Maecenas maximus augue eget libero dictum.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque debitis maxime corrupti odio autem aliquam beatae, eum impedit cum! Temporibus.</p>
               </div>
               <div class="blog__bottom">
@@ -557,7 +557,7 @@
                 <p>25 MARCH 2021</p>
               </div>
               <div class="blog__mid">
-                <h3>Lorem ipsum dolor sit amet.</h3>
+                <h3>Maecenas maximus augue eget libero dictum.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque debitis maxime corrupti odio autem aliquam beatae, eum impedit cum! Temporibus.</p>
               </div>
               <div class="blog__bottom">
@@ -576,27 +576,150 @@
         <div class="logo__car__content">
           <div class="logo1">
             <img src="./img/logo-pink1.png" alt="">
+            <img src="./img/logo-light1.png" alt="">
           </div>
           <div class="logo1">
             <img src="./img/logo-pink2.png" alt="">
+            <img src="./img/logo-light2.png" alt="">
           </div>
           <div class="logo1">
             <img src="./img/logo-pink3.png" alt="">
+            <img src="./img/logo-light3.png" alt="">
           </div>
           <div class="logo1">
             <img src="./img/logo-pink4.png" alt="">
+            <img src="./img/logo-light4.png" alt="">
           </div>
           <div class="logo1">
             <img src="./img/logo-pink5.png" alt="">
+            <img src="./img/logo-light5.png" alt="">
           </div>
           <div class="logo1">
             <img src="./img/logo-pink6.png" alt="">
+            <img src="./img/logo-light6.png" alt="">
           </div>
         </div>
       </section>
     </section>
     <footer>
-      <div class="sub"></div>
+      <div class="footer__wrap">
+        <div class="sub">
+            <div class="left__sc"><h2>Subscribe To Our Newsletter</h2></div>
+            <div class="right__sc">
+              <form>
+                <input type="email" name="" id="" placeholder="Your Email Address">
+                <button>
+                  <i class="fa fa-paper-plane"></i>
+                </button>
+            </form>
+          </div>
+        </div>
+        <div class="footer__content">
+          <div class="widget">
+            <div class="footer__logo">
+              <img src="./img/logo-white.png" alt="logo">
+            </div>
+            <div class="footer__contact">
+              <ul>
+                <li>
+                  <i class="fa fa-phone"></i>
+                  <span>1800-123-4567<br>+91 987-654-3210</span>
+                </li>
+                <li>
+                  <i class="fa fa-envelope"></i>
+                    <span>info@example.com<br>services@example.com</span>
+                </li>
+                <li>
+                  <i class="fa fa-map-marker"></i>
+                  <span>Demo Address #8901 Marmora<br>Road Chi Minh City, Vietnam</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="widget">
+            <div class="footer__title">
+              <h5>Our Link</h5>
+            </div>
+            <div class="footer__link">
+              <ul>
+                <li>
+                  <a href="#">Home</a>
+                </li>
+                <li>
+                  <a href="#">About Us</a>
+                </li>
+                <li>
+                  <a href="#">Services</a>
+                  </li>
+                  <li>
+                    <a href="#">Team</a>
+                    </li>
+                    <li>
+                      <a href="#">Blog</a>
+                      </li>
+              </ul>
+            </div>
+          </div>
+          <div class="widget">
+            <div class="footer__title">
+              <h5>Our Link</h5>
+            </div>
+            <div class="footer__link">
+              <ul>
+                <li>
+                  <a href="#">Home</a>
+                </li>
+                <li>
+                  <a href="#">About Us</a>
+                </li>
+                <li>
+                  <a href="#">Services</a>
+                  </li>
+                  <li>
+                    <a href="#">Team</a>
+                    </li>
+                    <li>
+                      <a href="#">Blog</a>
+                      </li>
+              </ul>
+            </div>
+          </div>
+          <div class="widget">
+            <div class="footer__title">
+              <h5>Our Link</h5>
+            </div>
+            <div class="footer__link">
+              <ul>
+                <li>
+                  <a href="#">Home</a>
+                </li>
+                <li>
+                  <a href="#">About Us</a>
+                </li>
+                <li>
+                  <a href="#">Services</a>
+                  </li>
+                  <li>
+                    <a href="#">Team</a>
+                    </li>
+                    <li>
+                      <a href="#">Blog</a>
+                      </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer__copyright">
+        <div class="copyright__content">
+          <div class="cr__left"><span>Copyright © 2021 <a href="#">DexignZone</a>. All rights reserved.</span></div>
+          <div class="cr__right">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-twitter"></i>
+          </div>
+        </div>
+      </div>
     </footer>
     <a href="#" class="backToTop text-replace js-cd-top">
       <i class="fa fa-angle-up"></i>
