--- a/homework/BC14_SAMAR_Pham Nguyen Phuong Khai/index.html
+++ b/homework/BC14_SAMAR_Pham Nguyen Phuong Khai/index.html
@@ -154,7 +154,7 @@
                 <h4>About Us</h4>
                 <h1>Build Your Business Website Better</h1>
               </div>
-              <h6>
+              <h6 style="font-size: 15px; line-height: 25px; margin-bottom: 16px;">
                 Proin laoreet leo vel enim gravida, at porttitor metus
                 ultricies. Cras eu velit enim. Vivamus blandit, dolor ut aliquet
                 rutrum, ex elit mattis sapien, non molestie felis neque et
@@ -163,19 +163,19 @@
               </h6>
               <ul>
                 <li>
-                  <i class="fa fa-check"></i>We support programs that create
+                  We support programs that create
                   advancement opportunities for people.
                 </li>
                 <li>
-                  <i class="fa fa-check"></i>Get a view of events and trends. Be
+                  Get a view of events and trends. Be
                   updated on our recent news.
                 </li>
                 <li>
-                  <i class="fa fa-check"></i>Finally, it all comes down to
+                  Finally, it all comes down to
                   people. Creating a winning team.
                 </li>
                 <li>
-                  <i class="fa fa-check"></i>Get a view of events and trends. Be
+                  Get a view of events and trends. Be
                   updated on our recent news.
                 </li>
               </ul>
@@ -249,7 +249,7 @@
               <div class="feature__bottom">
                 <div class="feature__item">
                   <div class="feature__icon">
-                    <i class="fa fa-brain"></i>
+                    <i class="fab fa-readme"></i>
                   </div>
                   <div class="feature__text">
                     <h4>Idea & Analysis Gathering</h4>
@@ -261,7 +261,7 @@
                 </div>
                 <div class="feature__item" id="feature__different">
                   <div class="feature__icon">
-                    <i class="fa fa-laptop-code"></i>
+                    <i class="fa fa-laptop"></i>
                   </div>
                   <div class="feature__text">
                     <h4>Design & Developing</h4>
@@ -432,7 +432,7 @@
                     <img src="./img/pic6_1.jpg" alt="" style="width: 125px" />
                   </div>
                   <div class="price__item">
-                    <p>$49</p>                   
+                    <p>$49</p>
                   </div>
                   <div class="feature__price__item">
                     <ul>
