--- a/Learn-JS/homework2/homework2.html
+++ b/Learn-JS/homework2/homework2.html
@@ -41,7 +41,8 @@
             <button type="reset" id="delete">Xoá số</button>
           </form>
           <button onclick="resultSum5()">Kết quả</button>
-          <h1>Kết quả là:</h1> <h1 style="font-size: 64px; margin-top: 10px;" id="showResult"></h1>
+          <h2>Kết quả là:</h2> <h2 style="font-size: 44px; margin-top: 10px;" id="showResult"></h2>
+          <a href="./index.html" class="back" id="backToHome">Back</a>
         </div>
       </div>
     </section>
