--- a/Learn-JS/homework2/homework3.html
+++ b/Learn-JS/homework2/homework3.html
@@ -23,7 +23,8 @@
             </div>
           </form>
           <button onclick="changeCurency()">Đổi tiền</button>
-          <h1>Số tiền quy đổi:</h1><span><h1 style="font-size: 64px; margin-top: 10px;" id="showVND"></h1></span>
+          <h2>Số tiền quy đổi:</h2><span><h2 style="font-size: 64px; margin-top: 10px;" id="showVND"></h2></span>
+          <a href="./index.html" class="back" id="backToHome">Back</a>
         </div>
       </div>
     </section>
