--- a/Learn-JS/homework2/homework4.html
+++ b/Learn-JS/homework2/homework4.html
@@ -31,12 +31,10 @@
           <button onclick="resultPerimeter()">Chu vi</button>
           <button onclick="resultAcgreage()">Diện tích</button>
           <div class="result">
-            <h1>Kết quả là:</h1>
-            <span
-              style="font-size: 44px; margin-top: 10px"
-              id="showResultRectangle"
-            ></span>
+            <h2>Kết quả là:</h2>
+            <h2 style="font-size: 44px; margin-top: 10px;" id="showResultRectangle"></h2>
           </div>
+          <a href="./index.html" class="back" id="backToHome">Back</a>
         </div>
       </div>
     </section>
