--- a/Learn-JS/homework2/homework1.html
+++ b/Learn-JS/homework2/homework1.html
@@ -12,23 +12,18 @@
       <div class="homework">
         <div class="title">
           <h1>Đề bài</h1>
-          <h3 style="margin-top: 10px">
-            Nhập số hàng chục bất kì để tính tổng 2 ký số
-          </h3>
+          <h3 style="margin-top: 10px;">Tính lương nhân viên</h3>
         </div>
         <hr />
         <div class="form-content">
           <form>
-            <div class="number2Unit">
-              <label style="margin-bottom: 10px; font-weight: 600;">Nhập số hàng chục (10 < 99)</label>
-              <input type="text" id="ten" placeholder="Nhập số ..." />
+            <div class="curency">
+              <label>Nhập số ngày: </label>
+              <input type="text" id="daysEmployee" placeholder="Nhập số ngày..." />
             </div>
           </form>
-          <button onclick="result2Unit()">Chu vi</button>
-          <div class="result">
-            <h2>Kết quả là:</h2>
-            <h2 id="showResult2Unit"></h2>
-          </div>
+          <button onclick="calEmployee()">Đổi tiền</button>
+          <h2>Số tiền nhận được:</h2><span><h2 style="font-size: 44px; margin-top: 10px;" id="showMessage"></h2></span>
           <a href="./index.html" class="back" id="backToHome">Back</a>
         </div>
       </div>
