--- a/Learn-JS/homework2/homework3bonus.html
+++ b/Learn-JS/homework2/homework3bonus.html
@@ -34,10 +34,8 @@
             </div>
           </form>
           <button onclick="changeCurency2Unit()">Đổi tiền</button>
-          <h1>Số tiền quy đổi:</h1>
-          <span
-            ><h1 style="font-size: 64px; margin-top: 10px" id="showMoney"></h1
-          ></span>
+          <h2>Số tiền quy đổi:</h2><span><h2 style="font-size: 44px; margin-top: 10px" id="showMoney"></h2></span>
+          <a href="./index.html" class="back" id="backToHome">Back</a>
         </div>
       </div>
     </section>
