--- a/Learn-JS/homework6/index.html
+++ b/Learn-JS/homework6/index.html
@@ -32,13 +32,13 @@
     <div class="point">
       <h1>Chọn đối tượng ưu tiên</h1>
       <label style="display: block; margin: 5px 0">Điểm môn thứ 1</label>
-      <input type="text" placeholder="Diem Mot" id="score1" />
+      <input type="text" placeholder="Diem Mot" id="score1" style="padding: 8px; outline: 0; border-radius: 4px;"/>
       <label style="display: block; margin: 5px 0">Điểm môn thứ 2</label>
-      <input type="text" placeholder="Diem Hai" id="score2" />
+      <input type="text" placeholder="Diem Hai" id="score2" style="padding: 8px; outline: 0; border-radius: 4px;"/>
       <label style="display: block; margin: 5px 0">Điểm môn thứ 3</label>
-      <input type="text" placeholder="Diem Ba" id="score3" />
+      <input type="text" placeholder="Diem Ba" id="score3" style="padding: 8px; outline: 0; border-radius: 4px;"/>
     </div>
-    <button style="display: block; margin: 15px 0" onclick="passExam()">
+    <button style="display: block; margin: 15px 0; padding: 8px; outline: 0; border-radius: 4px; cursor: pointer;" onclick="passExam()">
       Tính điểm
     </button>
     <h1 id="showMessage"></h1>
