--- a/Learn-JS/BUOI6/index.html
+++ b/Learn-JS/BUOI6/index.html
@@ -9,7 +9,7 @@
   <body>
     <div>
       <h1>Bài tập 1</h1>
-      <button onclick="soNguyenDuongNhoNhat()">Kết quả</button>
+      <button onclick="soNguyenDuongNhoNhat()">Tính tổng</button>
       <span id="kQSoNguyenDuongNhoNhat"></span>
     </div>
     <hr />
@@ -17,7 +17,7 @@
       <h1>Bài tập 2</h1>
       <input type="text" id="nhapX" placeholder="Nhập X" />
       <input type="text" id="nhapN" placeholder="Nhập N" />
-      <button onclick="tinhTong2So()">Kết quả</button>
+      <button onclick="tinhTong2So()">Tính giai thừa</button>
       <span id="kQSn"></span>
     </div>
     <hr />
@@ -26,6 +26,12 @@
       <input type="text" id="nhapL" placeholder="Nhập N" />
       <button onclick="tinhGiaiThua()">Kết quả</button>
       <span id="kQGT"></span>
+    </div>
+    <hr />
+    <div>
+      <h1>Bài tập 4</h1>
+      <div id="genDiv"></div>
+      <button onclick="taoDiv()">Kết quả</button>
     </div>
     <script src="./main.js"></script>
   </body>
