--- a/Learn-JS/BC14_BAITAPJSQLNV_PHAM_NGUYEN_PHUONG_KHAI/index.html
+++ b/Learn-JS/BC14_BAITAPJSQLNV_PHAM_NGUYEN_PHUONG_KHAI/index.html
@@ -333,10 +333,10 @@
                     ></span>
                   </div>
                   <select class="form-control" id="chucvu">
-                    <option>Chọn chức vụ</option>
-                    <option>Sếp</option>
-                    <option>Trưởng phòng</option>
-                    <option>Nhân viên</option>
+                    <option value="">Chọn chức vụ</option>
+                    <option value="Sếp">Sếp</option>
+                    <option value="Trưởng phòng">Trưởng phòng</option>
+                    <option value="Nhân viên">Nhân viên</option>
                   </select>
                 </div>
 
