--- a/Learn-JS/BC14_BAITAPJSQLNV_PHAM_NGUYEN_PHUONG_KHAI/index.html
+++ b/Learn-JS/BC14_BAITAPJSQLNV_PHAM_NGUYEN_PHUONG_KHAI/index.html
@@ -365,7 +365,7 @@
           <!-- Modal footer -->
           <div class="modal-footer" id="modal-footer">
             <button id="btnThemNV" type="button" class="btn btn-success">
-              Thêm người dùng
+              Thêm mới
             </button>
             <button id="btnCapNhat" type="button" class="btn btn-success">
               Cập nhật
