--- a/Learn-JS/BC14_BAITAPJSQLNV_PHAM_NGUYEN_PHUONG_KHAI/index.html
+++ b/Learn-JS/BC14_BAITAPJSQLNV_PHAM_NGUYEN_PHUONG_KHAI/index.html
@@ -410,8 +410,8 @@
       });
     </script>
     <script src="./js/data.js"></script>
+    <script src="./js/validator.js"></script>
     <script src="./js/manage-data.js"></script>
-
     <script src="./js/main.js"></script>
   </body>
 </html>
